Feature/gyldige endringsperioder (#201)
* Legger til optional sjekk av gyldige endringsperioder.