@@ -155,10 +155,10 @@ public class PleiepengerSyktBarn implements Ytelse {
         return this;
     }
 
-    @JsonProperty(value = "endringsperiode")
+    //@JsonProperty(value = "endringsperiode")
     public List<Periode> getEndringsperiode() {
         //TODO endre til å bruke PerioderMedEndringUtil.getEndringsperiode(this)
-        return (endringsperiode == null) ? null : Collections.unmodifiableList(endringsperiode);
+        return (endringsperiode == null) ? List.of() : Collections.unmodifiableList(endringsperiode);
     }
     
     @Deprecated
